빌드 스크립트 정리: 1장, 2장